--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    
-        <div class="page1"></div>
+        <nav>
+            <h1>We think Elastic</h1>
+            <div class="nav-part2">
+                <h4>Service</h4>
+                <h4>Blogs</h4>
+                <h4>Contact</h4>
+                <h4>About</h4>
+            </div>
+        </nav>
+        <div class="page1">
+            <h1>We Think Elastic</h1>
+        </div>
+        <div class="custom_cursor"></div>
         <div class="page2"></div>
         <div id="svg">
             <svg width="1000" height="200">
