--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-        <nav>
+        <nav id="nav">
             <h1>We think Elastic</h1>
             <div class="nav-part2">
                 <h4>Service</h4>
