--- a/index.html
+++ b/index.html
@@ -7,25 +7,56 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
+    <!-- Navbar -->
         <nav id="nav">
-            <h1>We think Elastic</h1>
+            <img src="./assets/logo.png" alt="logo" height="70px"/>
             <div class="nav-part2">
-                <h4>Service</h4>
-                <h4>Blogs</h4>
+                <h4>Projects</h4>
+                <h4>Experties</h4>
                 <h4>Contact</h4>
                 <h4>About</h4>
             </div>
         </nav>
+
+        <!-- We think elastic page -->
         <div class="page1">
-            <h1>We Think Elastic</h1>
+            <h1>we think <br> elastic</h1>
+            <div class="sub">
+                <h2>Nous sommes l'équipe<br>we think elastic</h2>
+            </div>
         </div>
-        <div class="custom_cursor"></div>
-        <div class="page2"></div>
+
+        <!-- video page -->
+
+        <div class="video">
+            <video width="100%" height="100%" autoplay muted>
+                <source src="./assets/video-start.mp4" type="video/mp4">
+            </video>
+        </div>
+
+        <!-- <div class="custom_cursor"></div> -->
+
+        <div class="page2">
+            <div class="outer">
+                <h1><span>nous</span> AIDONS LES MARQUES</h1>
+                <div class="below">
+                    <p>grâce à un 🛞 Storytelling<br>
+                        impactant  une 💥 identité<br>
+                        visuelle ⚡ forte  des interfaces<br>
+                        digitales ultra fluides </p>
+                    <h2>à <span>grandir</span><br> PLUS VITE</h2>
+                </div>
+            </div>
+        </div>
+
+        <!-- sting page. -->
         <div id="svg">
             <svg width="1000" height="200">
                 <path d="M 10 100 Q 500 100 990 100" stroke="white" fill="transparent"/> //M (x-axis starting point) (y-axis height) Q(center height) () (x-axis ending point) (y-axis ending point)
             </svg>              
         </div>
+
+        <!-- Experience page -->
         <div class="page3">
             <h1>
                 EXPERIENCE
