--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We think Elastic</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
 </head>
 <body>
     <!-- Navbar -->
@@ -29,13 +30,12 @@
         <!-- video page -->
 
         <div class="video">
-            <video width="100%" height="100%" autoplay muted>
+            <video width="100%" height="100%" autoplay muted loop>
                 <source src="./assets/video-start.mp4" type="video/mp4">
             </video>
         </div>
 
-        <!-- <div class="custom_cursor"></div> -->
-
+        
         <div class="page2">
             <div class="outer">
                 <h1><span>nous</span> AIDONS LES MARQUES</h1>
@@ -43,11 +43,35 @@
                     <p>grâce à un 🛞 Storytelling<br>
                         impactant  une 💥 identité<br>
                         visuelle ⚡ forte  des interfaces<br>
-                        digitales ultra fluides </p>
+                        digitales ultra fluides 
+                    </p>
                     <h2>à <span>grandir</span><br> PLUS VITE</h2>
                 </div>
             </div>
         </div>
+        
+        <div class="cursor"></div>
+        <div class="custom_cursor">
+            <div class="left">
+                <video width="30%" height="30%" autoplay muted loop>
+                    <source src="./assets/short-video.mp4" type="video/mp4">
+                </video>
+                <div>
+                    <div class="p">
+                        <p>HEC PARIS IEC</p>
+                        <p>Branding, Digital, Stratégie</p>
+                    </div>
+                </div>
+            </div>
+            <div class="right">
+                <div>
+                    <p>WHITE COFFEE</p>
+                    <p>BRANDING Stratégie</p>
+                </div>
+                <img src="./assets/white-coffee.webp" alt="right" height="100%" width="100%" />
+            </div>
+        </div>
+
 
         <!-- sting page. -->
         <div id="svg">
