fixing overlay issue

--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
                 </div>
             </div>
         </div>
-        
+        // solving the gitter problem using overlay(transparent div)
         <div class="cursor"></div>
-        <div class="custom_cursor">
+        <div class="custom_cursor"> 
             <div class="left">
+                <div class="overL"></div>
                 <video width="30%" height="30%" autoplay muted loop>
                     <source src="./assets/short-video.mp4" type="video/mp4">
                 </video>
@@ -68,6 +69,7 @@
                     <p>WHITE COFFEE</p>
                     <p>BRANDING Stratégie</p>
                 </div>
+                <div class="overR"></div>
                 <img src="./assets/white-coffee.webp" alt="right" height="100%" width="100%" />
             </div>
         </div>
